--- a/app/src/main/res/drawable/ic_launcher_foreground.xml
+++ b/app/src/main/res/drawable/ic_launcher_foreground.xml
@@ -4,15 +4,20 @@
     android:height="108dp"
     android:viewportWidth="108"
     android:viewportHeight="108">
-    <group android:scaleX="0.5"
-        android:scaleY="0.5"
-        android:translateX="27"
-        android:translateY="27">
+
+    <!-- Stylized X for Xpense -->
+    <group
+        android:pivotX="54"
+        android:pivotY="54">
+
+        <!-- Left stroke of X (top-left to bottom-right) -->
         <path
             android:fillColor="#FFFFFF"
-            android:pathData="M54,27c-14.912,0 -27,12.088 -27,27s12.088,27 27,27s27,-12.088 27,-27S68.912,27 54,27zM54,75c-11.579,0 -21,-9.421 -21,-21s9.421,-21 21,-21s21,9.421 21,21S65.579,75 54,75z"/>
+            android:pathData="M32,30 L40,30 L76,78 L68,78 Z"/>
+
+        <!-- Right stroke of X (top-right to bottom-left) -->
         <path
             android:fillColor="#FFFFFF"
-            android:pathData="M54,39c-8.284,0 -15,6.716 -15,15s6.716,15 15,15s15,-6.716 15,-15S62.284,39 54,39zM58,62h-8v-4h8V62zM58,54h-8v-12h8V54z"/>
+            android:pathData="M68,30 L76,30 L40,78 L32,78 Z"/>
     </group>
 </vector>
